tests/derive/unique_entities.stderr
error[E0277]: the trait bound `shipyard::Unique<shipyard::storage::entity::Entities>: shipyard::run::system_data::SystemData<'_>` is not satisfied
 --> $DIR/unique_entities.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^ the trait `shipyard::run::system_data::SystemData<'_>` is not implemented for `shipyard::Unique<shipyard::storage::entity::Entities>`
  |
  = help: the following implementations were found:
            <shipyard::Unique<&T> as shipyard::run::system_data::SystemData<'a>>
            <shipyard::Unique<&mut T> as shipyard::run::system_data::SystemData<'a>>
  = note: required because of the requirements on the impl of `shipyard::run::system_data::SystemData<'sys>` for `(shipyard::Unique<shipyard::storage::entity::Entities>,)`
