tests/derive/unique_entities.rs
use shipyard::*;

#[system(Test)]
fn run(_: Unique<Entities>) {}

fn main() {}
